--- a/Zhou.ipynb
+++ b/Zhou.ipynb
@@ -578,7 +578,7 @@
    "metadata": {},
    "source": [
     "# Code Description\n",
-    "Since I only need 2 columns of the database, I copied the two columns I need. The code then cleans up the code like blank spaces. Then group each of the rows and then I sort the neighborhood from highest to lowest and keep the Top 10. Then I graph the "
+    "Since I only need 2 columns of the database, I copied the two columns I need. The code then cleans up the code like blank spaces. Then group each of the rows and then I sort the neighborhood from highest to lowest and keep the Top 10. Then I graph the dataset. "
    ]
   },
   {
