--- a/Mu.ipynb
+++ b/Mu.ipynb
@@ -646,6 +646,22 @@
     "## Conclusion\n",
     "The best neighborhood in Pittsburgh based on this metric is Shadyside. Followed by Squirrel Hill South Brookline and Squirrel Hill North."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d710dc-3c78-48c8-8278-93cad2e8a99a",
+   "metadata": {},
+   "source": [
+    "# Pros and Cons Using This Metric\n",
+    "\n",
+    "## **Pros**\n",
+    "- It shows how popular or attractive a neighborhood is, if a neighborhood's population grows that means more people wnats to live there.\n",
+    "- Growing Neighborhood often see more city investments, like new roads, public transits and park. Which means that this neighborhood has more resources.\n",
+    "\n",
+    "\n",
+    "## **Cons**\n",
+    "- The data doesn't specify who is moving in or out, like high income, low income, students, etc. Becuases the type of change matters"
+   ]
   }
  ],
  "metadata": {
