--- a/Zhou.ipynb
+++ b/Zhou.ipynb
@@ -590,6 +590,23 @@
     "The best Neighborhood in Pittsburgh is Brookline, along with Squirrel Hill North and Point Breeze. \n",
     "Even though Squirrel Hill South, Regent Square, and Swisshelm Park got Top 1, it consists of 3 neighborhood, so the exact data is unknown. However, since all 3 neighborhoods are next to each other, they still have a chance in the overall decision across all 3 datasets. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad47118-4f36-4c22-ac15-48aa315142fa",
+   "metadata": {},
+   "source": [
+    "# Pros and Cons Using This Metric\n",
+    "\n",
+    "## **Pros**\n",
+    "- It signals strong academic resources, like access to advanced programs\n",
+    "- A neighborhood that enrolls more gifted students will attract more parents and families, which will result in a positive feedback loop: more motivaed families, stronger school culture which will lead to even better programs.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## **Cons**\n",
+    "- The data ignores the total student population; It only looks at total number of gifted students, but ignores the fact that a bigger neightborhood might have more gifted students."
+   ]
   }
  ],
  "metadata": {
