--- a/Zhou.ipynb
+++ b/Zhou.ipynb
@@ -10,18 +10,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c77e954-46ad-4b32-a417-429ec8b83723",
+   "cell_type": "markdown",
+   "id": "c40c918a-a7c6-4355-b222-70fd7314168b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "This dataset has 5 columns the first column including the name of the neighborhood and the rest of the columns are enrollment numbers for the gifted IEP, other IEP, and just regular enrollment. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "42698836-a929-4814-8e04-822a51d0dafe",
    "metadata": {},
    "outputs": [
@@ -504,7 +502,7 @@
        "43                162                    244  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +567,7 @@
     "    ax.text(b.get_x()+b.get_width()/2, y, f\"{int(y):,}\", ha=\"center\", va=\"bottom\", fontsize=9)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
