--- a/Result.ipynb
+++ b/Result.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "# Final Conclusion\n",
-    "After the whole team's review we have concluded the best neighborhood is Squirrel Hill South. "
+    "After reviewing all three metrics, we concluded that Squirrel Hill South is the best overall neighborhood in Pittsburgh. It consistently performed at the top of our analyses, leading in both the IEP/gifted enrollment metric and the population metric. Not only does it have the highest population (15,317 residents), but that population has also remained stable over the past decade, suggesting long term satisfaction among residents. While Squirrel Hill South did not take the top spot in the parks dataset, it still finished strong with three official city parks, placing it solidly among the more park accessible neighborhoods. When we evaluated all results together, Squirrel Hill South was the only neighborhood that performed well across every metric. Because it excels in educational access, demonstrates stable long-term residency, and offers reliable access to parks and green space, Squirrel Hill South stands out as the best neighborhood in our entire study."
    ]
   },
   {
