--- a/Result.ipynb
+++ b/Result.ipynb
@@ -169,7 +169,7 @@
    "id": "c24cab1b-6c65-4145-85dd-6d255cd61a66",
    "metadata": {},
    "source": [
-    "After reviewing all the metric together with my team, we decided on picking Squirrel Hill South. This neighbrohood has the most population of 15317 people. Even though Squirrel Hill South has a low population increase rate, this means that Squirrel Hill South has a mature and stable neighborhood. In addition, no population decrease means that no people are leaving the neighborhood, so the people living in the neighborhood are happy with their current conditions. "
+    "After reviewing all the metric together with my team, we decided on picking Squirrel Hill South. This neighborhood has the most population of 15317 people. Even though Squirrel Hill South has a low population increase rate, this means that Squirrel Hill South has a mature and stable neighborhood. In addition, no population decrease means that no people are leaving the neighborhood, so the people living in the neighborhood are happy with their current conditions. "
    ]
   },
   {
