--- a/Result.ipynb
+++ b/Result.ipynb
@@ -250,7 +250,7 @@
    "id": "abf27d22-1ba5-4b07-a6f4-2a7ddb5c3c4d",
    "metadata": {},
    "source": [
-    "After reviewing with my team, We decided "
+    "After reviewing the parks dataset with my team, we found that Beechview and South Side Slopes leads with six parks, making them the top neighborhood in terms of sheer park quantity. However, park access across the top twenty neighborhoods is overall very strong, making any of these neighborhoods desirable. So ultimately, Squirrel Hill South making the top 20 with 3 parks gives it the ability to have sufficient access to green space, recreational opportunities, and outdoor environments that support healthy living."
    ]
   },
   {
